<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <!--<item
        android:id="@+id/rifas"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/Premios"
        android:icon="@drawable/ic_card_giftcard_white_24dp"/-->
    <item
        android:id="@+id/facebook"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/FacebookPage"/>
    <item
        android:id="@+id/instagram"
        android:orderInCategory="300"
        app:showAsAction="never"
        android:title="@string/InstaPage"/>
    <item
        android:id="@+id/cerrar_sesion"
        android:orderInCategory="400"
        app:showAsAction="never"
        android:title="@string/CerrarSesion"/>
</menu>
