<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.evilgeniuses.raykgeneer.blueartstudioapp.AddTiendaFragment">

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@android:color/transparent"
        android:layout_margin="10sp"
        android:src="@drawable/add_btn"
        android:id="@+id/IBProducto"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:id="@+id/EProducto"
        android:layout_marginBottom="10sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:padding="5sp"
        android:background="@drawable/input_outline_dark"
        android:hint="@string/Producto"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:id="@+id/EPrecio"
        android:inputType="numberDecimal"
        android:layout_marginBottom="10sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:padding="5sp"
        android:background="@drawable/input_outline_dark"
        android:hint="@string/Titulo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:background="@color/colorPrimary"
            android:layout_gravity="center|bottom"
            android:text="@string/Publicar"
            android:id="@+id/BPublicar"
            android:textColor="@color/white"
            android:textSize="25dp"/>

    </LinearLayout>

</LinearLayout>
